// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.DraggableItem checkGrammar 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkGrammar 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkGrammar 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkGrammar 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkHighlight 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkHighlight 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkHighlight 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkHighlight 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkSpaces 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkSpaces 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkSpaces 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem checkSpaces 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem className 1`] = `
<div
  className="uu5-bricks-draggable-item my-classname"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem content 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={12345}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem content 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content="This is Content from ContentMixin"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem content 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content="This is Content from ContentMixin"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem content 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={12345}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem controlled 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem controlled 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem controlled 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem controlled 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem default props 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem disabled 1`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-disabled"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem disabled 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem disabled 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem disabled 4`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-disabled"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem docKit example UU5.Bricks.DraggableItem example 01 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Draggable
    className="wrapper"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID2"
    ignoreInnerHTML={false}
    key="uuID2"
    mainAttrs={null}
    name={null}
    noIndex={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    <DraggableItem
      className="item"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID3"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      onMove={[Function]}
      onMoveEnd={[Function]}
      onMoveStart={[Function]}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
      x={0}
      y={0}
    />
  </Draggable>
</div>
`;

exports[`UU5.Bricks.DraggableItem dynamic 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem dynamic 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem dynamic 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem dynamic 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem hidden 1`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-hidden"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem hidden 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem hidden 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem hidden 4`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-hidden"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem id 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="myId"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem ignoreHTML 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem ignoreHTML 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem ignoreHTML 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem ignoreHTML 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem mainAttrs 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem name 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  name="myName"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 5`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 6`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 7`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 8`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 9`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 10`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 11`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 12`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 13`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 14`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem nestingLevel 15`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel 16`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel 17`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel 18`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel 19`] = `""`;

exports[`UU5.Bricks.DraggableItem nestingLevel 20`] = `""`;

exports[`UU5.Bricks.DraggableItem noIndex 1`] = `
<div
  className="uu5-bricks-draggable-item uu5-noindex"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem noIndex 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem noIndex 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem noIndex 4`] = `
<div
  className="uu5-bricks-draggable-item uu5-noindex"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMove() 1`] = `
<Draggable
  className="wrapper"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID01"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  noIndex={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <DraggableItem
    className="item"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    x={0}
    y={0}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMove() 2`] = `
<Draggable
  className="wrapper"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID01"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  noIndex={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <DraggableItem
    className="item"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    x={0}
    y={0}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMoveEnd() 1`] = `
<Draggable
  className="wrapper"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID01"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  noIndex={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <DraggableItem
    className="item"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    x={0}
    y={0}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMoveEnd() 2`] = `
<Draggable
  className="wrapper"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID01"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  noIndex={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <DraggableItem
    className="item"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    x={0}
    y={0}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMoveStart() 1`] = `
<Draggable
  className="wrapper"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID01"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  noIndex={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <DraggableItem
    className="item"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    x={0}
    y={0}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem props.function UU5.Bricks.DraggableItem onMoveStart() 2`] = `
<Draggable
  className="wrapper"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID01"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  noIndex={false}
  ref_={null}
  selected={false}
  style={null}
  tooltip={null}
>
  <DraggableItem
    className="item"
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    onMove={[Function]}
    onMoveEnd={[Function]}
    onMoveStart={[Function]}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    x={0}
    y={0}
  />
</Draggable>
`;

exports[`UU5.Bricks.DraggableItem pureRender 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem pureRender 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem pureRender 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem pureRender 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem selected 1`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-selected"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem selected 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem selected 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem selected 4`] = `
<div
  className="uu5-bricks-draggable-item uu5-common-selected"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem style 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem style 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem style 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem style 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem textCorrector 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem textCorrector 2`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem textCorrector 3`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem textCorrector 4`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem tooltip 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 0,
    }
  }
  title="My Tooltip"
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem x 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 50,
      "top": 0,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.DraggableItem y 1`] = `
<div
  className="uu5-bricks-draggable-item"
  id="uuID"
  onMouseDown={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "left": 0,
      "top": 70,
    }
  }
  title={null}
>
  <Div
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id={null}
    ignoreInnerHTML={false}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={true}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;
